src/libs/qmljs/qmljscheck.h
@@ -122,6 +122,8 @@ private:
     bool isQtQuick2() const;
     bool isQtQuick2Ui() const;
 
+    bool isCaseOrDefault(AST::Node *n);
+
     AST::Node *parent(int distance = 0);
 
     Document::Ptr _doc;
